@@ -27,7 +27,7 @@ $wp_customize->add_section(
 	new Astra_WP_Customize_Section(
 		$wp_customize, 'section-woo-general',
 		array(
-			'title'    => __( 'General', 'astra-addon' ),
+			'title'    => __( 'General', 'astra' ),
 			'panel'    => 'panel-layout',
 			'section'  => 'section-woo-group',
 			'priority' => 5,
@@ -38,7 +38,7 @@ $wp_customize->add_section(
 	new Astra_WP_Customize_Section(
 		$wp_customize, 'section-woo-shop',
 		array(
-			'title'    => __( 'Shop', 'astra-addon' ),
+			'title'    => __( 'Shop', 'astra' ),
 			'panel'    => 'panel-layout',
 			'section'  => 'section-woo-group',
 			'priority' => 10,
@@ -50,7 +50,7 @@ $wp_customize->add_section(
 	new Astra_WP_Customize_Section(
 		$wp_customize, 'section-woo-shop-single',
 		array(
-			'title'    => __( 'Single Product', 'astra-addon' ),
+			'title'    => __( 'Single Product', 'astra' ),
 			'panel'    => 'panel-layout',
 			'section'  => 'section-woo-group',
 			'priority' => 15,
