@@ -157,7 +157,7 @@ if ( ! function_exists( 'astra_woo_return_to_shopping' ) ) :
 	?>
 		<p class="ast-return-to-shop return-to-shop">
 			<a class="button wc-backward" href="<?php echo esc_url( apply_filters( 'woocommerce_return_to_shop_redirect', wc_get_page_permalink( 'shop' ) ) ); ?>">
-				<?php _e( 'Continue shopping', 'woocommerce' ); ?>
+				<?php _e( 'Continue shopping', 'astra' ); ?>
 			</a>
 		</p>
 	<?php
