@@ -1,6 +1,6 @@
 {
   "name": "astra",
-  "version": "1.0.32",
+  "version": "1.1.0-beta.1",
   "description": "A very lightweight and beautiful theme made to work with Page Builders.",
   "main": "Gruntfile.js",
   "repository": {
